Fix Ace element being truncated after fresh install & project creation

--- a/ide/app/spark_polymer.css
+++ b/ide/app/spark_polymer.css
@@ -68,6 +68,10 @@ body {
   overflow: hidden;
 }
 
+#aceContainer {
+  height: 100%;
+}
+
 /*
  * Ace overrides.
  * TODO(ussuri): Move to a separate file.
